[gd_scene load_steps=10 format=2]

[ext_resource path="res://pickups/key/key.png" type="Texture" id=1]
[ext_resource path="res://pickups/store/Store.gd" type="Script" id=2]
[ext_resource path="res://pickups/coin/coin.png" type="Texture" id=4]
[ext_resource path="res://pickups/store/salesman.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.6496, 6.62225 )

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.23978, 8.30702 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 2 )

[node name="Store" type="Node2D"]
script = ExtResource( 2 )

[node name="Salesman" type="Area2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Salesman"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Salesman/StaticBody2D"]
position = Vector2( -0.0367432, -0.00331116 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Salesman"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Salesman"]
texture = ExtResource( 5 )

[node name="Balloon" type="Sprite" parent="Salesman"]
position = Vector2( 0.166855, -19.4803 )

[node name="SalesmanHappyTimer" type="Timer" parent="Salesman"]
one_shot = true

[node name="Item1" type="Area2D" parent="."]
position = Vector2( -40, 31 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item1"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Item1"]
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Item1/Sprite"]
margin_left = -5.35136
margin_top = 8.26486
margin_right = 10.6486
margin_bottom = 24.2649
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="Sprite" parent="Item1"]
position = Vector2( 11, 14.863 )
texture = ExtResource( 4 )

[node name="Item2" type="Area2D" parent="."]
position = Vector2( 1, 31 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item2"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Item2"]
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Item2/Sprite"]
margin_left = -5.35136
margin_top = 8.26486
margin_right = 10.6486
margin_bottom = 24.2649
custom_fonts/normal_font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin2" type="Sprite" parent="Item2"]
position = Vector2( 11, 14.863 )
texture = ExtResource( 4 )

[node name="Item3" type="Area2D" parent="."]
position = Vector2( 40, 31 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item3"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Item3"]
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Item3/Sprite"]
margin_left = -5.35136
margin_top = 8.26486
margin_right = 10.6486
margin_bottom = 24.2649
custom_fonts/normal_font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin3" type="Sprite" parent="Item3"]
position = Vector2( 11, 14.863 )
texture = ExtResource( 4 )
[connection signal="area_entered" from="Salesman" to="." method="_on_Salesman_area_entered"]
[connection signal="timeout" from="Salesman/SalesmanHappyTimer" to="." method="_on_SalesmanHappyTimer_timeout"]
[connection signal="body_entered" from="Item1" to="." method="_on_Item1_body_entered"]
[connection signal="body_exited" from="Item1" to="." method="_on_Item1_body_exited"]
[connection signal="body_entered" from="Item2" to="." method="_on_Item2_body_entered"]
[connection signal="body_exited" from="Item2" to="." method="_on_Item2_body_exited"]
[connection signal="body_entered" from="Item3" to="." method="_on_Item3_body_entered"]
[connection signal="body_exited" from="Item3" to="." method="_on_Item3_body_exited"]
